[gd_scene load_steps=4 format=3 uid="uid://dftu0kvglo0ki"]

[ext_resource type="Script" path="res://src/cherry_post/cherry_dropped.gd" id="1_76qum"]
[ext_resource type="Texture2D" uid="uid://bs2j8w4ydimn" path="res://assets/images/Cherry_1.png" id="2_31k45"]
[ext_resource type="Texture2D" uid="uid://bd0vbxmfsbbnh" path="res://assets/images/Cherry_2.png" id="3_p3xaj"]

[node name="cherry_dropped" type="Node2D"]
script = ExtResource("1_76qum")

[node name="cherry_1" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
texture = ExtResource("2_31k45")

[node name="cherry_2" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
texture = ExtResource("3_p3xaj")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
